# paragraphs

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
paragraphs/: __init__.py  main.py  paragraphs.py
source/: conf.py  index.rst  modules.rst
test/: test_paragraphs.py
tests/: test_par.py  test_paragraphs.py
