[project]
name = "paragraphs"
version = "1.0.1"
description = "Incorporate long strings painlessly, beautifully into Python code."
authors = [{ name = "Shay Hill", email = "shay_public@hotmail.com" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["commitizen", "pre-commit", "pytest", "tox"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.1"
tag_format = "$version"
version_files = ["pyproject.toml:^version"]


[tool.isort]
profile = "black"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{312,311,310,39,38}

[testenv]
deps = pytest
commands = pytest
"""


[tool.pyright]
exclude = ["**/__pycache__.py"]

pythonVersion = "3.8"
pythonPlatform = "Any"

typeCheckingMode = "strict"
reportShadowedImports = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

venvPath = "."
venv = "./venv"
